SC/20: Add some command definitions.

--- a/docs/sc/020/sc20.tex
+++ b/docs/sc/020/sc20.tex
@@ -22,8 +22,14 @@
       pipeline which carries out many of these steps using a single
       command. Specialised pipeline recipes are discussed.}
 
-% Definitions
+%-------------------------------------------------------------------
+
+% Local Definitions
 \providecommand{\lutedit}{\xref{\task{lutedit}}{sun95}{LUTEDIT}}
+\newcommand{\acsispipelinesun}{\xref{\textbf{SUN/260}}{sun260}{}}
+
+% Frame attributes fount.
+\providecommand{\att}[1]{\textsf{#1}}
 
 % degrees symbol
 %\usepackage{siunitx}
@@ -45,6 +51,7 @@
 % decimal-arcsecond symbol
 \providecommand{\uarcs}{\hspace{-0.27em}\arcsec\hspace{-0.07em}}
 
+%-------------------------------------------------------------------
 
 \begin{document}
 \scfrontmatter
