SC/20: Augment the style conventions.

--- a/docs/sc/020/sc20.tex
+++ b/docs/sc/020/sc20.tex
@@ -108,9 +108,12 @@ This guide covers the following:
 \textbf{Style convention}\\
 In this cookbook the following styles are followed:
 \begin{itemize}[noitemsep,nolistsep]
-\item \texttt{\%}  represents the command-line prompt.
+\item \texttt{\%} represents the command-line prompt.
 \item Command-line examples are shown in \texttt{\color{MidnightBlue}{navy typewriter font.}}
+\item Parameters, FITS keywords, parameters and their values are presented in \texttt{typewriter font}.
+\item The names of Starlink commands appear as in \task{san serif font}.
 \item The names of \gaia\ commands or windows appear in \gaiathing{like this}.
+\item The names of attributes appear like \att{StdOfRest}.
 \item Useful tips or reminders are given in outlined boxes.
 \end{itemize}
 
