SC/20: Replace spaced en-dashes with em-dashes.

--- a/docs/sc/020/sc20.tex
+++ b/docs/sc/020/sc20.tex
@@ -824,7 +824,7 @@ column from bottom to top to check its consistency. In
 \cref{Figure}{fig:rawgaia}{the first figure below} H04 is dead for the
 whole observation. The spectrum for a receptor at one of the time
 slices can be seen by clicking on the pixel. This will bring up a
-third window -- the \gaiathing{Spectral plot} (see
+third window---the \gaiathing{Spectral plot} (see
 \cref{Figure}{fig:gaia2}{the second figure below}). This spectrum will
 be replaced when you click on a different pixel.
 
@@ -856,7 +856,7 @@ vertical red bar on the \gaiathing{Spectral plot} window. As you do so
 array shown in the main window will automatically update.
 
 You will likely want to change the auto cut of the colour scale, the
-colour scheme and the zoom factor -- all of which are controlled by
+colour scheme and the zoom factor---all of which are controlled by
 buttons on the sidebar in the main window.
 
 See the \xref{\textsc{Gaia} manual}{sun214}{} for full
@@ -900,8 +900,8 @@ spectra (see Figures \ref{fig:maskreceptor} and
   The left hand \gaia\ window shows the raw data before masking.
   Clicking on a pixel will show the spectra. The spectra shown is from
   receptor H01 at Step 18 (see circled $Y$ value). To mask this receptor
-  in time from step 18 to 33 -- at which point the bad baselines
-  disappear -- use \chpix. The right hand \gaia\ window shows the raw
+  in time from Step 18 to 33---at which point the bad baselines
+  disappear---use \chpix. The right hand \gaia\ window shows the raw
   data after masking where the time range in question is now blank.}
 
 \myfig{sc20_badreceptor2}{[h!]}{width=0.9\linewidth}{fig:maskreceptor2}{Identifying bad receptors in the raw data: second method.}{
@@ -966,7 +966,7 @@ mode. The pixel size can be checked in the projection parameters
 section, while the bounding box of the resulting cube (RA, Dec and
 velocity) is reported in the output section.
 
-You can visualise your map by opening it with \gaia\ -- see
+You can visualise your map by opening it with \gaia---see
 Figure~\ref{fig:gaiareduced}.
 
 \myfig{sc20_makecubeout}{[t!]}{width=0.65\linewidth}{fig:gaiareduced}{A regridded cube produced with \makecube.}{
@@ -1388,7 +1388,7 @@ regions set to 1.
 \subsection{Moments Maps}
 
 You can use \collapse\ to generate the moments maps by selecting the
-appropriate \param{estimator} option -- Integrated value
+appropriate \param{estimator} option---Integrated value
 (\param{Integ}) for the integrated map (zeroth moment),
 Intensity-weighted co-ordinate (\param{Iwc}) to get the velocity field
 (first moment), or Intensity-weighted dispersion (\param{Iwd}) to get the
@@ -1888,8 +1888,8 @@ remaining spatial pixels.
 \end{minipage}
 \begin{minipage}[t]{0.85\linewidth}
 All data values in the clump are projected onto the spatial plane and
-``size'' of the collapsed clump at four different position angles --
-all separated by 45$^\circ$ -- is found. The ellipse that generates
+``size'' of the collapsed clump at four different position angles---all
+separated by 45$^\circ$---is found. The ellipse that generates
 the same sizes at the four position angles is then found and used as
 the clump shape.
 \end{minipage}
